--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit_folium==0.6.13
+streamlit-folium==0.14.0
+streamlit-folium==0.6.13
 pandas==2.1.1
 numpy==1.26.0
 google-auth==2.3.3
 streamlit>=1.13.0
 folium>=0.13
-streamlit_folium==0.15.0
+streamlit-folium==0.15.0
 
